# App

./: pyproject.toml
src/crud_app_prp/: __main__.py  auth.py
